--- a/digitalDen/src/main/resources/application.properties
+++ b/digitalDen/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Configuring MySql Database Connection
-spring.datasource.url=jdbc:mysql://localhost:3306/digitalden
-spring.datasource.username=root
-spring.datasource.password=Sumit@1234
+spring.datasource.url=jdbc:mysql://sql6.freemysqlhosting.net/sql6472203
+spring.datasource.username=sql6472203
+spring.datasource.password=qCvWNSNYJt
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Cofigure JPA
