--- a/digitalDen/src/main/resources/application.properties
+++ b/digitalDen/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 #Configuring MySql Database Connection
-spring.datasource.url=jdbc:mysql://sql6.freemysqlhosting.net/sql6472203
-spring.datasource.username=sql6472203
-spring.datasource.password=qCvWNSNYJt
+spring.datasource.url=jdbc:mysql://digital-den.mysql.database.azure.com/digitalDen
+spring.datasource.username=SumitBaria@digital-den
+spring.datasource.password=Dontask123?!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Cofigure JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
