--- a/digitalDen/src/main/resources/application.properties
+++ b/digitalDen/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+#JDBC Connection
+#jdbc.driverClassName = com.mysql.jdbc.Driver
+#jdbc.readdb.proxy.url = jdbc:mysql://digital-den.mysql.database.azure.com
+#jdbc.writedb.proxy.url = jdbc:mysql://digital-den.mysql.database.azure.com
+#jdbc.username=SumitBaria@digital-den
+#jdbc.password=Dontask123?!
