--- a/digitalDen/src/main/resources/application.properties
+++ b/digitalDen/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #Configuring MySql Database Connection
-spring.datasource.url=jdbc:mysql://digital-den.mysql.database.azure.com/digitalDen
-spring.datasource.username=SumitBaria@digital-den
-spring.datasource.password=Dontask123?!
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://digital-den.mysql.database.azure.com/digitalDen
+#spring.datasource.username=SumitBaria@digital-den
+#spring.datasource.password=Dontask123?!
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Cofigure JPA
 spring.jpa.hibernate.ddl-auto=update
@@ -10,8 +10,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 #JDBC Connection
-#jdbc.driverClassName = com.mysql.jdbc.Driver
-#jdbc.readdb.proxy.url = jdbc:mysql://digital-den.mysql.database.azure.com
-#jdbc.writedb.proxy.url = jdbc:mysql://digital-den.mysql.database.azure.com
-#jdbc.username=SumitBaria@digital-den
-#jdbc.password=Dontask123?!
+jdbc.driverClassName = com.mysql.jdbc.Driver
+jdbc.readdb.proxy.url = jdbc:mysql://digital-den.mysql.database.azure.com
+jdbc.writedb.proxy.url = jdbc:mysql://digital-den.mysql.database.azure.com/digitalden
+jdbc.username=SumitBaria@digital-den
+jdbc.password=Dontask123?!
