--- a/digitalDen/build.gradle
+++ b/digitalDen/build.gradle
@@ -17,6 +17,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'javax.inject:javax.inject:1'
 	implementation 'com.mchange:c3p0:0.9.5.5'
+	implementation 'org.springframework.security:spring-security-web:5.6.2'
+	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+	implementation 'org.springframework.security:spring-security-crypto:5.6.2'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
