Changes In Progress

--- a/digitalDen/src/main/resources/application.properties
+++ b/digitalDen/src/main/resources/application.properties
@@ -15,3 +15,7 @@ jdbc.readdb.proxy.url = jdbc:mysql://digitalden.mysql.database.azure.com
 jdbc.writedb.proxy.url = jdbc:mysql://digitalden.mysql.database.azure.com/digitalden
 jdbc.username=SumitBaria@digitalden
 jdbc.password=Dontask123?!
+
+
+security.basic.enabled: false
+management.security.enabled: false
