--- a/digitalDen/build.gradle
+++ b/digitalDen/build.gradle
@@ -21,7 +21,8 @@ dependencies {
 	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 	implementation 'org.springframework.security:spring-security-crypto:5.6.2'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-	runtimeOnly 'mysql:mysql-connector-java'
+    implementation 'org.springframework.boot:spring-boot-autoconfigure:2.6.6'
+    runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
